--- a/systemd/sshtunnel.service
+++ b/systemd/sshtunnel.service
@@ -1,14 +1,11 @@
-# Mothpi systemd Service
 # See https://man.archlinux.org/man/systemd.unit.5
-
 [Install]
 WantedBy=default.target
 
 [Unit]
-Description=Mothpi Moth Scanner
+Description=Mothpi SSH Reverse SSH tunnel
 
 [Service]
 # Environmental variables from ~/.config/environment.d/mothpi.conf
-ExecStart=/usr/bin/env python3  ${MOTHPI_BASEDIR}/mothpi/mothpi.py --config ${MOTHPI_CONFIG}
+ExecStart=ssh -N -R ${MOTHPI_REMOTE_PORT}:localhost:22 ${MOTHPI_SERVER_ADRESS} -p ${MOTHPI_SERVER_PORT}
 Restart=on-failure
-Type=notify
