--- a/systemd/uploader.service
+++ b/systemd/uploader.service
@@ -6,5 +6,9 @@ Description=Mothpi Pictures Uploader
 
 [Service]
 Type=oneshot
+ExecStart=/bin/env rsync -r --exclude="/*/" -z -e "ssh -p ${MOTHPI_SERVER_PORT}" --remove-source-files --include='*.jpg' --include='*.png'  ${MOTHPI_PICTURES_DIR} ${MOTHPI_SERVER_ADRESS}:${MOTHPI_SERVER_STORAGE_DIR}
+
+# Explanation:
+# --exclude="/*/" Sbdirectories are not copied
+# --include='*.xxx' only include xxx files
 # Environmental variables from ~/.config/environment.d/mothpi.conf
-ExecStart=/bin/env rsync -r --exclude="/*/" -vz -e "ssh -p ${MOTHPI_SERVER_PORT}" --remove-source-files --include='*.jpg'  ${MOTHPI_PICTURES_DIR} ${MOTHPI_SERVER_ADRESS}:${MOTHPI_SERVER_STORAGE_DIR}
